# diploma-thesis-algorithm

./: .gitignore  Cargo.toml  README.md  build-wasm.sh  build.nix  build.sh  devshell.nix  flake.nix  nixos-module.nix  nixos-vm.nix  rust-toolchain.toml
.cargo/: config
proptest-regressions/: proof_search.txt
src/: callback.rs  disequality.rs  lib.rs  log.rs  main.rs  multiset.rs  parse.rs  polynomial.rs  proof.rs  proof_search.rs  substitution.rs  term.rs  timeout.rs  ui.rs  web_unchecked.rs  worker.rs
www/: index.html  manifest.appcache  manifest.json  manifest.mf  service-worker.js  worker.js
