[package]
name = "thesis-algorithm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
serde = { version = "1.0.162", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"

[dependencies.web-sys]
version = "0.3.61"
features = ["console", "Document", "Window", "InputEvent", "HtmlInputElement"]

[dev-dependencies]
proptest = "1.1.0"
