[package]
name = "thesis-algorithm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
serde = { version = "1.0.162", features = ["derive"] }
console_error_panic_hook = "0.1.6"
wasm-bindgen-futures = "0.4.37"
futures = "0.3.28"
bincode = "1.3.3"

[dependencies.web-sys]
version = "0.3.61"
features = ["console", "Document", "Window", "InputEvent", "HtmlInputElement", "Node", "Text", "Performance", "Worker","WorkerOptions", "WorkerType", "MessageEvent", "DedicatedWorkerGlobalScope", "Url", "UrlSearchParams", "Location","History"]

[dev-dependencies]
proptest = "1.1.0"
